hw-04-crud/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usercrud
  labels:
    app: usercrud
spec:
  replicas: 2
  
  selector:
    matchLabels:
      app: usercrud
  
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  
  template:
    metadata:
      labels:
        app: usercrud
    spec:
      # Ждём пока PostgreSQL будет готов
      containers:
        - name: usercrud
          image: tobantal/otus-hw04:v1
          
          ports:
            - containerPort: 8000
              protocol: TCP
          
          # Переменные окружения из ConfigMap и Secret
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          
          # Readiness probe
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 2
          
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
