hw-04-crud/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usercrud-svc
  labels:
    app: usercrud
spec:
  type: ClusterIP
  
  selector:
    app: usercrud
  
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
